Fixes navigation collapse on small screens.
The navigation menu was overflowing off the right side of the screen,
even though there was supposed to be some code to collapse it down to
'...'. The problem was the positioning of the menu and the project logo
links. Moving then around fixed the issue.

--- a/src/App.css
+++ b/src/App.css
@@ -35,8 +35,9 @@ body {
 }
 
 .janeliaLogo {
-  float:right;
-  margin-left: 2em;
+  position: absolute;
+  top: 0;
+  right: 2em;
 }
 
 .janeliaLogo img {
